--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: darkgray;
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -60,3 +60,97 @@
   .slider.round:before {
     border-radius: 50%;
   }
+
+
+/*              Page style                   */
+
+body {
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial';
+}
+
+#page{
+  background-color: white;
+  display: block;
+  width: 70vw;
+  height: 150vh;
+  justify-self: center;
+
+  > div{
+    height: 150vh;
+  }
+}
+
+
+.flex-contrainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.flex-item:first-child{
+    margin-top: 20px;
+}
+
+.flex-item:last-child{
+    height: 80vh;
+    text-align: start;
+}
+
+.flex-item{
+    display: initial;
+    text-align: center;
+}
+
+#title{
+    width: 50%;
+    text-align: center;
+}
+
+#form{
+    background-color: lightgrey;
+    width: 70%;
+    border-radius: 30px;
+    padding-bottom: 5px;
+
+    p{
+        text-align: left;
+        height: 1em;
+        
+        label:first-child{
+            margin-left: 10%;
+        }
+        
+        label:last-child{
+            display: block;
+            right: -80%;
+            top: -1em;
+        }
+    }
+
+    p:first-child{
+        margin: 1em;
+        text-align: center;
+
+        label {
+            font-weight: bold;
+            margin: 5%;
+        }
+
+        input{
+            border-radius: 5px;
+            border-width: 0;
+            width: 100px;
+            padding-left: 15px;
+            text-align: center;
+        }
+    }
+
+}
+
+p{
+    margin: 0.5em;
+}
