--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@
 
 /*              Page style                   */
 
+
 body {
     background-color: black;
     margin: 0;
@@ -153,4 +154,32 @@ body {
 
 p{
     margin: 0.5em;
+}
+
+
+@media screen and (max-width: 768px) {
+    body{
+        font-size: 0.8em !important;
+    }
+
+    #page{
+        width: 100% !important;
+    }
+
+    #title{
+        width: 90% !important;
+    }
+
+    #form{
+        width: 90%;
+    }
+
+    
+    #svg-container{
+        /*transform: scale(100%) !important;*/
+        /*padding-top: 200px !important;*/
+        svg{
+            width: 100vw;
+        }
+    }
 }
